# fluidfft

./: .appveyor.yml  .gitattributes  .gitlab-ci.yml  .hgignore  .hgtags  .readthedocs.yml  .travis.yml  CHANGES.md  CHANGES.rst  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  README.rst  bitbucket-pipelines.yml  config.py  environment.yml  make_default_config.py  meson.build  noxfile.py  pixi.toml  postBuild  purepymake.py  pylintrc  pyproject.toml  setup.cfg  setup.py  setup_build.py  setup_config.py  setup_configure.py  setup_make.py  site.cfg.default  site.cfg.example  site.cfg.legi  site.cfg.mkl  tmp_segfault_conda.py  tox-windows.ini  tox.ini  try_pyproject.toml
.github/: environment-windows.yml  fluidfft-site-seq.cfg  pythranrc-windows
bench/: bench2d.py  bench3d.py  benchcpp2d.py  benchcpp3d.py  benchsccp2d.py  check_mpi.py  check_openmp.py  investigate_segfault.py  launch.slurm  launch.slurm2  plot_bench2d.py  submit_benchmarks2d_legi.py  submit_benchmarks3d_legi.py  submit_benchmarks3d_occigen.py  submit_benchmarks_legi.py  submit_benchmarks_snic.py
doc/: HOWTO_build_the_doc  Makefile  bench.md  bench.rst  build-from-source.md  conf.py  dependencies.rst  environment.yml  examples.md  examples.rst  fft_libs.rst  index.md  index.rst  install.md  install.rst  install_fftw.sh  install_occigen.rst  install_openblas.sh  overview.md  overview.rst  plugins.md  requirements.txt  to_do.md  to_do.rst  todo_fft_gpu_mpi.md  tutorials.md  tutorials.rst
docker/: Dockerfile  Makefile
fluidfft/: __init__.py  _version.py  base.py  bench.py  bench_analysis.py  test_bench.py  test_init.py  util.py
fluidfft2d/: __init__.py
fluidfft3d/: __init__.py
include/: cpu_builtin.h
old/: setup.py  setup_build.py  setup_configure.py  setup_make.py  site.cfg.default
plugins/: README.md  pixi.toml
plugins/fluidfft-build-deps/: pyproject.toml
plugins/fluidfft-build-deps/fluidfft_build_deps/src_cpp/2d/: fft2d_with_fftw1d.cpp  plot_results.py  run_benchs.py
plugins/fluidfft-build-deps/fluidfft_build_deps/src_cpp/3d/: README.rst  base_fft3dmpi.cpp  fft3d_with_fftw3d.cpp  fft3dmpi_with_fftw1d.h
plugins/fluidfft-build-deps/fluidfft_build_deps/src_cpp/base/: base_fft.cpp  base_fft.h
plugins/fluidfft-build-deps/fluidfft_build_deps/src_cy/: create_fake_mod_for_doc.py  make_files_with_mako.py  template2d_mako.pxd  util_pyfftw.pyx
plugins/fluidfft-builder/: README.md  pyproject.toml
plugins/fluidfft-builder/fluidfft_builder/: __init__.py  create_fake_mod_for_doc.py  make_cy_files.py
plugins/fluidfft-builder/fluidfft_builder/include_cy/: base.pyx  base_mpi.pyx  cpu.pxd
plugins/fluidfft-builder/fluidfft_builder/src_cpp/: base_fft.cpp  base_fft.h  base_fft2d.cpp  base_fftmpi.h  cpu.h  mainpage.h
plugins/fluidfft-builder/fluidfft_builder/src_cpp/2d/: Makefile  base_fft2d.h  fft2d_with_fftw1d.h  fft2dmpi_with_fftw1d.h  fft2dmpi_with_fftwmpi2d.h
plugins/fluidfft-builder/fluidfft_builder/src_cpp/3d/: fft3d_with_fftw3d.h  test_bench.cpp
plugins/fluidfft-builder/fluidfft_builder/src_cpp/base/: base_fftmpi.cpp
plugins/fluidfft-builder/fluidfft_builder/src_cy/: template2d_mako.pyx  template3d_mako.pxd  template3d_mako.pyx
plugins/fluidfft-builder/fluidfft_builder/templates/: template2d.pxd  template2d.pyx  template3d.pxd  template3d.pyx
plugins/fluidfft-fftw/: LICENSE  Makefile  README.md  meson.build  pyproject.toml
plugins/fluidfft-fftw/src/fluidfft_fftw/: meson.build
plugins/fluidfft-fftw/src/fluidfft_fftw/fft1d/: meson.build
plugins/fluidfft-fftw/src/fluidfft_fftw/fft2d/: fft2d_with_fftw1d.cpp  fft2d_with_fftw2d.cpp  meson.build
plugins/fluidfft-fftw/src/fluidfft_fftw/fft3d/: fft3d_with_fftw3d.cpp  meson.build
plugins/fluidfft-fftw/tests/: test_2d.py  test_3d.py
plugins/fluidfft-fftwmpi/: Makefile  README.md  fft2dmpi_with_fftwmpi2d.cpp  fft3dmpi_with_fftwmpi3d.h  meson.build  pyproject.toml
plugins/fluidfft-fftwmpi/src/fluidfft_fftwmpi/: meson.build
plugins/fluidfft-fftwmpi/src/fluidfft_fftwmpi/fft2d/: fft2dmpi_with_fftwmpi2d.cpp  meson.build
plugins/fluidfft-fftwmpi/src/fluidfft_fftwmpi/fft3d/: fft3dmpi_with_fftwmpi3d.cpp  meson.build
plugins/fluidfft-fftwmpi/tests/: test_2d.py  test_3d.py
plugins/fluidfft-mpi4pyfft/: pyproject.toml
plugins/fluidfft-mpi4pyfft/src/fluidfft_mpi4pyfft/: mpi_with_mpi4pyfft.py  mpi_with_mpi4pyfft_slab.py
plugins/fluidfft-mpi4pyfft/tests/: test_with_mpi4pyfft.py
plugins/fluidfft-mpi_with_fftw/: README.md  meson.build  pyproject.toml
plugins/fluidfft-mpi_with_fftw/src/fluidfft_mpi_with_fftw/: meson.build
plugins/fluidfft-mpi_with_fftw/src/fluidfft_mpi_with_fftw/fft2d/: fft2dmpi_with_fftw1d.cpp  meson.build
plugins/fluidfft-mpi_with_fftw/src/fluidfft_mpi_with_fftw/fft3d/: fft3dmpi_with_fftw1d.cpp  meson.build
plugins/fluidfft-mpi_with_fftw/tests/: test_2d.py  test_3d.py
plugins/fluidfft-p3dfft/: README.md  fft3dmpi_with_p3dfft.cpp  meson.build  pyproject.toml
plugins/fluidfft-p3dfft/src/fluidfft_p3dfft/: fft3dmpi_with_p3dfft.cpp  meson.build
plugins/fluidfft-p3dfft/tests/: test_p3dfft.py
plugins/fluidfft-pfft/: README.md  fft3dmpi_with_pfft.cpp  meson.build  pyproject.toml
plugins/fluidfft-pfft/src/fluidfft_pfft/: fft3dmpi_with_pfft.cpp  meson.build
plugins/fluidfft-pfft/tests/: test_pfft.py
plugins/fluidfft-pyfftw/: pyproject.toml
plugins/fluidfft-pyfftw/src/fluidfft_pyfftw/: fft2d.py  fft3d.py
plugins/fluidfft-pyfftw/tests/: test_with_pyfftw.py
requirements/: dev.txt  doc.txt  main.txt  mpi.txt  test.txt
scripts/: benchs2d.py  benchs3d.py  benchsccp2d.py  benchsccp3d.py  classes2d.py  classes3d.py  launch.slurm  launch_bench3d.oar  tests2d.py  tests3d.py
site.cfg.files/: site.cfg.appveyor_win  (+8 more)
src/fluidfft/: __init__.py  _version.py  base.py  bench.py  bench_analysis.py  meson.build  test_bench.py  test_init.py  util.py
src/fluidfft/fft2d/: __init__.py  meson.build  operators.py  test_2d.py  testing.py  with_dask.py
src/fluidfft/fft3d/: __init__.py  base.py  meson.build  mpi_with_mpi4pyfft.py  mpi_with_mpi4pyfft_slab.py  operators.py  test_3d.py  testing.py  with_pyfftw.py
(+445 files in other folders)
