[metadata]
name = fluidfft
description = Efficient and easy Fast Fourier Transform (FFT) for Python.
keywords = Fast Fourier Transform, FFT, spectral code
license = CeCILL License
author = Pierre Augier
author_email = pierre.augier@legi.cnrs.fr
url = https://bitbucket.org/fluiddyn/fluidfft
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    Intended Audience :: Education
    Topic :: Scientific/Engineering
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    # actually CeCILL License (GPL compatible license for French laws)
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Cython
    Programming Language :: C

[options]
python_requires = >= 3.6

install_requires =
    fluiddyn >= 0.2.3
    transonic >= 0.1.8

[options.extras_require]

doc =
    sphinx
    sphinx_rtd_theme
    numpydoc

fftw =
    pyfftw >= 0.10.4

mpi = mpi4py

test =
    pytest
    pytest-cov
    pythran
    ipython
    %(fftw)s

dev =
    %(doc)s
    %(test)s
    %(mpi)s

[flake8]
ignore = E501,E225,E226,E303,E201,E202,E203,W503

[coverage:run]
source =
    ./fluidfft
data_file = .coverage/coverage
omit =
    */test*.py
plugins = Cython.Coverage

[coverage:report]
show_missing = True
exclude_lines =
    raise ValueError
    if __name__ == '__main__':
    warnings.warn
    raise NotImplementedError
    except ValueError:

[coverage:html]
directory = .coverage

[coverage:xml]
output = .coverage/coverage.xml
