[metadata]
name = fluidfft
description = Efficient and easy Fast Fourier Transform (FFT) for Python.
keywords = Fast Fourier Transform, FFT, spectral code
license = CeCILL License
author = Pierre Augier
author_email = pierre.augier@legi.cnrs.fr
url = https://foss.heptapod.net/fluiddyn/fluidfft
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    Intended Audience :: Education
    Topic :: Scientific/Engineering
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    # actually CeCILL License (GPL compatible license for French laws)
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Cython
    Programming Language :: C

[options]
python_requires = >= 3.6

[options.extras_require]

doc =
    sphinx
    sphinx_rtd_theme
    sphinx_copybutton
    numpydoc
    nbsphinx
    pandas
    jupyter

fftw =
    pyfftw >= 0.10.4

mpi = mpi4py

test =
    pytest
    pytest-cov
    ipython
    %(fftw)s

dev =
    %(doc)s
    %(test)s
    %(mpi)s

full =
    %(dev)s

[flake8]
ignore = E501,E225,E226,E303,E201,E202,E203,W503

[coverage:run]
source =
    ./fluidfft
data_file = .coverage/coverage
omit =
    */test*.py
plugins = Cython.Coverage

[coverage:report]
show_missing = True
exclude_lines =
    raise ValueError
    if __name__ == '__main__':
    warnings.warn
    raise NotImplementedError
    except ValueError:

[coverage:html]
directory = .coverage

[coverage:xml]
output = .coverage/coverage.xml
