[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "fluidfft_build_deps"
version = "0.0.1"
description = "Fluidfft plugin dependencies"
authors = [{name = "Pierre Augier", email = "pierre.augier@univ-grenoble-alpes.fr"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dependencies = ["fluidfft", "pyfftw"]

[project.urls]
Home = "https://foss.heptapod.net/fluiddyn/fluidfft"
