[build-system]
requires = [
         "meson-python",
         "numpy",
         "transonic>=0.6.0",
         "fluidfft_build_deps>=0.0.1",
         "pythran>=0.9.7",
         "jinja2",
         "mako",
         "cython",
         ]
build-backend = 'mesonpy'

dependencies = [
    "fluidfft >= 0.3.5",
    "transonic >= 0.4",
    "importlib_metadata; python_version < '3.10'",
]

[project]
name = "fluidfft_fftw"
version = "0.0.1"
description = "Fluidfft plugin using fftw"
authors = [{name = "Pierre Augier", email = "pierre.augier@univ-grenoble-alpes.fr"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dependencies = ["fluidfft", "pyfftw"]

[project.urls]
Home = "https://foss.heptapod.net/fluiddyn/fluidfft"

[project.entry-points."fluidfft.plugins"]

"fft2d.with_fftw1d" = "fluidfft_fftw.fft2d.with_fftw1d"
"fft2d.with_fftw2d" = "fluidfft_fftw.fft2d.with_fftw2d"
"fft3d.with_fftw3d" = "fluidfft_fftw.fft3d.with_fftw3d"
