[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "fluidfft_pyfftw"
version = "0.0.1"
description = "Fluidfft plugin using pyfftw"
authors = [{name = "Pierre Augier", email = "pierre.augier@univ-grenoble-alpes.fr"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dependencies = ["fluidfft", "pyfftw"]

[project.urls]
Home = "https://foss.heptapod.net/fluiddyn/fluidfft"

[project.entry-points."fluidfft.plugins"]

"fft2d.with_pyfftw" = "fluidfft_pyfftw.fft2d"
"fft3d.with_pyfftw" = "fluidfft_pyfftw.fft3d"
